# cwprep

./: .env.example  .gitignore  LICENSE  README.md  TFL_Flow_Specification.md  changelog.md  config.example.yaml  config.yaml  dataflow 18.订单表 客户 (2).tfl  demo_output.tfl  modify_flow.py  pyproject.toml  requirements.txt  test_calculation.py  test_comprehensive.py  test_new_features.py  test_new_features_v2.py  test_sdk_ultimate_v2.py  test_union_pivot.py  订单员工.tfl
.agents/: publish.md
.agents/skills/tfl-generator/: SKILL_Zh-cn.md  SKILl.md
.agents/skills/tfl-generator/references/: api.md  calculations.md
backup/: dataflow 16.订单表.tfl  dataflow 18.订单表 客户.tfl  订单表精简maestroMetadata
core/: builder.py  config.py  packager.py
dataflow 16.订单表/: displaySettings  flow  maestroMetadata
dataflow 18.订单表 客户/: displaySettings  flow  maestroMetadata
demo_output/: comprehensive.tfl  displaySettings  flow  maestroMetadata  销售业绩分析.tfl
demo_output/comprehensive/: displaySettings  flow
demo_output/comprehensive ok/: displaySettings  flow  maestroMetadata
demo_output/销售业绩分析/: displaySettings  flow
docs/: TFL_Flow_Specification.md  database.md  tableau_agent_reference.md  tableau_prep_calculation.md
examples/: README.md  demo_aggregation.py  demo_basic.py  demo_cleaning.py  demo_comprehensive.py  demo_field_operations.py  demo_mcp_flow.py  prompts.md  quick_start.py
examples/demo_data/: db_superstore.md  db_superstore.txt  init_superstore.sql  load_superstore.py  load_superstore_postgresql.py  load_superstore_sqlserver.py  mcp_customers.csv  mcp_orders.csv
sample/: dataflow 16.订单表.tfl
sample/dataflow 16.订单表/: flow
sample/聊天表并集转置/: displaySettings  flow  maestroMetadata
sample/订单员工/: displaySettings  flow  maestroMetadata
skills/tfl-generator/: SKILL.md  SKILL_EN.md
src/cwprep/: __init__.py  builder.py  config.py  expression_translator.py  mcp_server.py  packager.py  translator.py
src/cwprep/references/: api_reference.md  best_practices.md  calculation_syntax.md
tests/: __init__.py  conftest.py  test_builder.py  test_config.py  test_mcp_server.py  test_translator.py
workspace/output/: simple_gold.tfl  ultimate_v2.tfl  测试并集和转置.tfl  测试新功能.tfl  测试新功能V2.tfl  测试计算字段.tfl  销售业绩分析.tfl
workspace/output/simple_gold/: displaySettings  flow  maestroMetadata
workspace/output/ultimate_v2/: displaySettings  flow
workspace/output/测试并集和转置/: displaySettings  flow
workspace/output/测试新功能/: displaySettings  flow  maestroMetadata
workspace/output/测试新功能V2/: displaySettings  flow  maestroMetadata
workspace/output/测试计算字段/: displaySettings  flow
workspace/output/销售业绩分析/: displaySettings  flow  maestroMetadata
