[build-system]
requires = ["hatchling<1.25"]
build-backend = "hatchling.build"

[project]
name = "cwprep"
dynamic = ["version"]
description = "Tableau Prep Flow SDK - Programmatically generate .tfl files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { name = "cooper wenhua" }
]
keywords = [
    "tableau",
    "tableau-prep",
    "etl",
    "data-pipeline",
    "tfl",
    "data-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dotenv = ["python-dotenv>=1.0"]
mcp = ["mcp>=1.25,<2", "cffi>=1.0.0,<2.0.0"]
all = ["pyyaml>=6.0", "python-dotenv>=1.0", "mcp>=1.25,<2", "cffi>=1.0.0,<2.0.0"]
dev = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "mcp>=1.25,<2",
    "cffi>=1.0.0,<2.0.0",
    "pytest>=7.0",
    "build>=1.0",
]

[project.scripts]
cwprep-mcp = "cwprep.mcp_server:main"

[project.urls]
Homepage = "https://github.com/imgwho/cwprep"
Documentation = "https://github.com/imgwho/cwprep#readme"
Repository = "https://github.com/imgwho/cwprep.git"
Issues = "https://github.com/imgwho/cwprep/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cwprep"]

[tool.hatch.metadata]
license-files = []

[tool.hatch.version]
path = "src/cwprep/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
